grammars/mysql/grammar.js
    source_file: $ => seq(
      repeat(choice(seq($._top_statement, ';'), ';')),
      optional($._top_statement),
    ),

    // BEGIN starts a transaction only outside a stored program. Inside one,
    // it starts a block.
    _top_statement: $ => choice(
      $._statement,
      alias($._begin_work, $.start_transaction_statement),
    ),

    select_statement: $ => $._query_expression,

    _query_expression: $ => seq(
      optional($.with_clause),
      $._query_body,
      optional($.order_by_clause),
      optional($.limit_clause),
      repeat(choice($.into_clause, $.locking_clause)),
    ),

    select: $ => prec.right(seq(
      kw('SELECT'),
      repeat($._select_modifier),
      commaSep1($._select_item),
      optional($.into_clause),
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.having_clause),
      optional($.window_clause),
    )),

    _select_modifier: _ => choice(
      kw('ALL'),
      kw('DISTINCT'),
      kw('DISTINCTROW'),
      kw('HIGH_PRIORITY'),
      kw('STRAIGHT_JOIN'),
      kw('SQL_SMALL_RESULT'),
      kw('SQL_BIG_RESULT'),
      kw('SQL_BUFFER_RESULT'),
      kw('SQL_NO_CACHE'),
      kw('SQL_CALC_FOUND_ROWS'),
    ),

    _select_item: $ => choice(
      $._expression,
      $.aliased_expression,
      $.all_columns,
    ),

    all_columns: $ => seq(
      optional(seq(
        optional(seq(field('schema', $.identifier), '.')),
        field('table', $.identifier),
        '.',
      )),
      '*',
    ),

    _character_set: $ => seq(
      choice(kws('CHARACTER', 'SET'), kw('CHARSET')),
      field('charset', $._charset_name),
    ),

    _charset_name: $ => choice($.identifier, $.string, kw('BINARY')),

    from_clause: $ => seq(
      kw('FROM'),
      choice(kw('DUAL'), commaSep1($._table_reference)),
    ),

    _table_reference: $ => choice(
      $.table_reference,
      $.derived_table,
      $.join,
      parens(commaSep1($._table_reference)),
    ),

    table_reference: $ => prec.right(seq(
      optional(seq(field('schema', $.identifier), '.')),
      field('name', $.identifier),
      optional($.partition_list),
      optional(seq(optional(kw('AS')), field('alias', $.identifier))),
      repeat($.index_hint),
    )),

    where_clause: $ => seq(kw('WHERE'), $._expression),

    create_database_statement: $ => seq(
      kw('CREATE'),
      choice(kw('DATABASE'), kw('SCHEMA')),
      optional($._if_not_exists),
      field('name', $.identifier),
      repeat($.database_option),
    ),

    alter_database_statement: $ => seq(
      kw('ALTER'),
      choice(kw('DATABASE'), kw('SCHEMA')),
      optional(field('name', $.identifier)),
      repeat1($.database_option),
    ),

    drop_database_statement: $ => seq(
      kw('DROP'),
      choice(kw('DATABASE'), kw('SCHEMA')),
      optional($._if_exists),
      field('name', $.identifier),
    ),

    database_option: $ => seq(
      optional(kw('DEFAULT')),
      choice(
        seq(choice(kws('CHARACTER', 'SET'), kw('CHARSET')), optional('='), field('value', choice($._charset_name, kw('DEFAULT')))),
        seq(kw('COLLATE'), optional('='), field('value', choice($.identifier, $.string, kw('DEFAULT')))),
        seq(kw('ENCRYPTION'), optional('='), field('value', $.string)),
        seq(kws('READ', 'ONLY'), optional('='), field('value', choice($.number, kw('DEFAULT')))),
      ),
    ),

    _if_exists: _ => kws('IF', 'EXISTS'),

    _if_not_exists: _ => kws('IF', 'NOT', 'EXISTS'),

    // Tables

    create_table_statement: $ => seq(
      kw('CREATE'),
      optional(kw('TEMPORARY')),
      kw('TABLE'),
      optional($._if_not_exists),
      field('name', $.object_reference),
      choice(
        seq(kw('LIKE'), field('like', $.object_reference)),
        parens(seq(kw('LIKE'), field('like', $.object_reference))),
        seq(
          optional(parens(commaSep1($._table_element))),
          optional($._table_options),
          optional($.partition_by),
          optional(seq(
            optional(choice(kw('IGNORE'), kw('REPLACE'))),
            optional(kw('AS')),
            $.select_statement,
          )),
        ),
      ),
    ),

    _table_element: $ => choice(
      $.column_definition,
      $.index_definition,
      $.table_constraint,
    ),

    column_definition: $ => seq(
      field('name', $.identifier),
      field('type', $.data_type),
      repeat($._column_attribute),
    ),

    _column_attribute: $ => choice(
      seq(optional(kw('NOT')), kw('NULL')),
      seq(kw('DEFAULT'), field('default', $._default_value)),
      seq(kws('ON', 'UPDATE'), field('on_update', $.function_call)),
      kw('AUTO_INCREMENT'),
      prec.right(seq(kw('UNIQUE'), optional(kw('KEY')))),
      seq(optional(kw('PRIMARY')), kw('KEY')),
      seq(kw('COMMENT'), field('comment', $.string)),
      seq(kw('COLUMN_FORMAT'), choice(kw('FIXED'), kw('DYNAMIC'), kw('DEFAULT'))),
      seq(kw('STORAGE'), choice(kw('DISK'), kw('MEMORY'))),
      kw('VISIBLE'),
      kw('INVISIBLE'),
      seq(kw('SRID'), $.number),
      seq(kws('SERIAL', 'DEFAULT', 'VALUE')),
      seq(
        optional(kws('GENERATED', 'ALWAYS')),
        kw('AS'),
        parens(field('generated', $._expression)),
        optional(choice(kw('VIRTUAL'), kw('STORED'))),
      ),
      $.references_clause,
      seq(
        optional(seq(kw('CONSTRAINT'), optional(field('constraint', $.identifier)))),
        $.check_constraint,
      ),
    ),

    // The manual allows a literal, an expression in parentheses or a
    // function such as CURRENT_TIMESTAMP after DEFAULT. A bare expression
    // would make NOT NULL after it ambiguous.
    _default_value: $ => choice(
      $._literal,
      alias($._signed_number, $.unary_expression),
      $.parenthesized_expression,
      $.function_call,
      $.identifier,
    ),

    data_type: $ => prec.right(seq(
      $.type_name,
      optional(parens(commaSep1(choice($.number, $.string)))),
      repeat(choice(
        kw('UNSIGNED'),
        kw('SIGNED'),
        kw('ZEROFILL'),
        kw('BINARY'),
        kw('ARRAY'),
        $._character_set,
        seq(kw('COLLATE'), field('collation', choice($.identifier, $.string))),
      )),
    )),

    type_name: _ => choice(
      kw('TINYINT'),
      kw('SMALLINT'),
      kw('MEDIUMINT'),
      kw('INT'),
      kw('INTEGER'),
      kw('BIGINT'),
      kw('INT1'),
      kw('INT2'),
      kw('INT3'),
      kw('INT4'),
      kw('INT8'),
      kw('DECIMAL'),
      kw('DEC'),
      kw('NUMERIC'),
      kw('FIXED'),
      kw('FLOAT'),
      seq(kw('DOUBLE'), optional(kw('PRECISION'))),
      kw('REAL'),
      kw('BIT'),
      kw('BOOL'),
      kw('BOOLEAN'),
      kw('SERIAL'),
      kw('DATE'),
      kw('DATETIME'),
      kw('TIMESTAMP'),
      kw('TIME'),
      kw('YEAR'),
      seq(optional(kw('NATIONAL')), kw('CHAR'), optional(kw('VARYING'))),
      seq(optional(kw('NATIONAL')), kw('CHARACTER'), optional(kw('VARYING'))),
      kw('NCHAR'),
      seq(optional(kw('NATIONAL')), kw('VARCHAR')),
      kw('NVARCHAR'),
      kw('VARCHARACTER'),
      kw('BINARY'),
      kw('VARBINARY'),
      kw('TINYBLOB'),
      kw('BLOB'),
      kw('MEDIUMBLOB'),
      kw('LONGBLOB'),
      kw('TINYTEXT'),
      kw('TEXT'),
      kw('MEDIUMTEXT'),
      kw('LONGTEXT'),
      kw('ENUM'),
      kw('SET'),
      kw('JSON'),
      kw('GEOMETRY'),
      kw('POINT'),
      kw('LINESTRING'),
      kw('POLYGON'),
      kw('MULTIPOINT'),
      kw('MULTILINESTRING'),
      kw('MULTIPOLYGON'),
      kw('GEOMETRYCOLLECTION'),
      kw('SIGNED'),
      kw('UNSIGNED'),
    ),

    index_definition: $ => seq(
      choice(
        seq(choice(kw('INDEX'), kw('KEY'))),
        seq(choice(kw('FULLTEXT'), kw('SPATIAL')), optional(choice(kw('INDEX'), kw('KEY')))),
      ),
      optional(field('name', $.identifier)),
      optional($._index_type),
      $.key_parts,
      repeat($._index_option),
    ),

    table_constraint: $ => seq(
      optional(seq(kw('CONSTRAINT'), optional(field('name', $.identifier)))),
      choice(
        seq(
          kws('PRIMARY', 'KEY'),
          optional($._index_type),
          $.key_parts,
          repeat($._index_option),
        ),
        seq(
          kw('UNIQUE'),
          optional(choice(kw('INDEX'), kw('KEY'))),
          optional(field('index', $.identifier)),
          optional($._index_type),
          $.key_parts,
          repeat($._index_option),
        ),
        seq(
          kws('FOREIGN', 'KEY'),
          optional(field('index', $.identifier)),
          $.column_list,
          $.references_clause,
        ),
        $.check_constraint,
      ),
    ),

    check_constraint: $ => prec.right(seq(
      kw('CHECK'),
      parens($._expression),
      optional(seq(optional(kw('NOT')), kw('ENFORCED'))),
    )),

    references_clause: $ => prec.right(seq(
      kw('REFERENCES'),
      field('table', $.object_reference),
      optional($.column_list),
      optional(seq(kw('MATCH'), choice(kw('FULL'), kw('PARTIAL'), kw('SIMPLE')))),
      repeat(seq(
        kw('ON'),
        choice(kw('DELETE'), kw('UPDATE')),
        choice(
          kw('RESTRICT'),
          kw('CASCADE'),
          kws('SET', 'NULL'),
          kws('SET', 'DEFAULT'),
          kws('NO', 'ACTION'),
        ),
      )),
    )),

    key_parts: $ => parens(commaSep1($.key_part)),

    key_part: $ => seq(
      choice(
        seq(field('column', $.identifier), optional(parens(field('length', $.number)))),
        parens(field('expression', $._expression)),
      ),
      optional(choice(kw('ASC'), kw('DESC'))),
    ),

    _index_type: _ => seq(kw('USING'), choice(kw('BTREE'), kw('HASH'))),

    _index_option: $ => choice(
      seq(kw('KEY_BLOCK_SIZE'), optional('='), $.number),
      $._index_type,
      seq(kws('WITH', 'PARSER'), $.identifier),
      seq(kw('COMMENT'), $.string),
      kw('VISIBLE'),
      kw('INVISIBLE'),
    ),

    column_list: $ => parens(commaSep1($.identifier)),

    _table_options: $ => seq(
      $.table_option,
      repeat(seq(optional(','), $.table_option)),
    ),

    table_option: $ => choice(
      seq(
        optional(kw('DEFAULT')),
        choice(kws('CHARACTER', 'SET'), kw('CHARSET')),
        optional('='),
        field('value', choice($._charset_name, kw('DEFAULT'))),
      ),
      seq(
        optional(kw('DEFAULT')),
        kw('COLLATE'),
        optional('='),
        field('value', choice($.identifier, $.string, kw('DEFAULT'))),
      ),
      seq(
        field('name', choice(
          kw('ENGINE'),
          kw('AUTO_INCREMENT'),
          kw('AVG_ROW_LENGTH'),
          kw('CHECKSUM'),
          kw('COMMENT'),
          kw('COMPRESSION'),
          kw('CONNECTION'),
          kws('DATA', 'DIRECTORY'),
          kws('INDEX', 'DIRECTORY'),
          kw('DELAY_KEY_WRITE'),
          kw('ENCRYPTION'),
          kw('INSERT_METHOD'),
          kw('KEY_BLOCK_SIZE'),
          kw('MAX_ROWS'),
          kw('MIN_ROWS'),
          kw('PACK_KEYS'),
          kw('PASSWORD'),
          kw('ROW_FORMAT'),
          kw('STATS_AUTO_RECALC'),
          kw('STATS_PERSISTENT'),
          kw('STATS_SAMPLE_PAGES'),
          kw('TABLESPACE'),
        )),
        optional('='),
        field('value', choice($.identifier, $.string, $.number, kw('DEFAULT'))),
      ),
      seq(kw('UNION'), optional('='), parens(commaSep1($.object_reference))),
    ),

    partition_by: $ => prec.right(seq(
      kws('PARTITION', 'BY'),
      choice(
        seq(optional(kw('LINEAR')), kw('HASH'), parens($._expression)),
        seq(
          optional(kw('LINEAR')),
          kw('KEY'),
          optional(seq(kw('ALGORITHM'), '=', $.number)),
          parens(optional(commaSep1($.identifier))),
        ),
        seq(
          choice(kw('RANGE'), kw('LIST')),
          choice(
            parens($._expression),
            seq(kw('COLUMNS'), parens(commaSep1($.identifier))),
          ),
        ),
      ),
      optional(seq(kw('PARTITIONS'), $.number)),
      optional(parens(commaSep1($.partition_definition))),
    )),

    partition_definition: $ => seq(
      kw('PARTITION'),
      field('name', $.identifier),
      optional(seq(
        kw('VALUES'),
        choice(
          seq(
            kws('LESS', 'THAN'),
            choice(kw('MAXVALUE'), parens(commaSep1($._expression))),
          ),
          seq(kw('IN'), parens(commaSep1($._expression))),
        ),
      )),
      repeat($.table_option),
    ),

    alter_table_statement: $ => seq(
      kw('ALTER'),
      kw('TABLE'),
      field('name', $.object_reference),
      optional(commaSep1($._alter_specification)),
      optional($.partition_by),
    ),

    _alter_specification: $ => choice(
      $.add_column,
      $.add_constraint,
      $.drop_column,
      $.drop_constraint,
      $.modify_column,
      $.change_column,
      $.rename_column,
      $.rename_index,
      $.rename_table,
      $.alter_column,
      $.alter_index,
      $.convert_to_charset,
      $.alter_option,
      $.table_option,
    ),

    add_column: $ => seq(
      kw('ADD'),
      optional(kw('COLUMN')),
      choice(
        seq($.column_definition, optional($._column_position)),
        parens(commaSep1($.column_definition)),
      ),
    ),

    _column_position: $ => choice(
      kw('FIRST'),
      seq(kw('AFTER'), field('after', $.identifier)),
    ),

    add_constraint: $ => seq(
      kw('ADD'),
      choice($.index_definition, $.table_constraint),
    ),

    drop_column: $ => seq(
      kw('DROP'),
      optional(kw('COLUMN')),
      field('name', $.identifier),
    ),

    drop_constraint: $ => seq(
      kw('DROP'),
      choice(
        seq(choice(kw('INDEX'), kw('KEY')), field('name', $.identifier)),
        kws('PRIMARY', 'KEY'),
        seq(kws('FOREIGN', 'KEY'), field('name', $.identifier)),
        seq(choice(kw('CHECK'), kw('CONSTRAINT')), field('name', $.identifier)),
      ),
    ),

    modify_column: $ => seq(
      kw('MODIFY'),
      optional(kw('COLUMN')),
      $.column_definition,
      optional($._column_position),
    ),

    change_column: $ => seq(
      kw('CHANGE'),
      optional(kw('COLUMN')),
      field('old', $.identifier),
      $.column_definition,
      optional($._column_position),
    ),

    rename_column: $ => seq(
      kws('RENAME', 'COLUMN'),
      field('old', $.identifier),
      kw('TO'),
      field('new', $.identifier),
    ),

    rename_index: $ => seq(
      kw('RENAME'),
      choice(kw('INDEX'), kw('KEY')),
      field('old', $.identifier),
      kw('TO'),
      field('new', $.identifier),
    ),

    rename_table: $ => seq(
      kw('RENAME'),
      optional(choice(kw('TO'), kw('AS'))),
      field('new', $.object_reference),
    ),

    alter_column: $ => seq(
      kw('ALTER'),
      optional(kw('COLUMN')),
      field('name', $.identifier),
      choice(
        seq(kws('SET', 'DEFAULT'), field('default', $._default_value)),
        kws('DROP', 'DEFAULT'),
        seq(kw('SET'), choice(kw('VISIBLE'), kw('INVISIBLE'))),
      ),
    ),

    alter_index: $ => seq(
      kws('ALTER', 'INDEX'),
      field('name', $.identifier),
      choice(kw('VISIBLE'), kw('INVISIBLE')),
    ),

    convert_to_charset: $ => seq(
      kws('CONVERT', 'TO'),
      $._character_set,
      optional(seq(kw('COLLATE'), field('collation', choice($.identifier, $.string)))),
    ),

    alter_option: $ => choice(
      seq(kw('ALGORITHM'), optional('='), field('value', choice($.identifier, kw('DEFAULT')))),
      seq(kw('LOCK'), optional('='), field('value', choice($.identifier, kw('DEFAULT')))),
      kw('FORCE'),
      seq(choice(kw('ENABLE'), kw('DISABLE')), kw('KEYS')),
      prec.right(seq(kws('ORDER', 'BY'), commaSep1($.identifier))),
    ),

    rename_table_statement: $ => seq(
      kw('RENAME'),
      choice(kw('TABLE'), kw('TABLES')),
      commaSep1(seq(
        field('old', $.object_reference),
        kw('TO'),
        field('new', $.object_reference),
      )),
    ),
